--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "NeastooID Scraper Module NPMJS",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["Ai", "Screper", "Api", "NeastooID"],
+  "author": "YusupKakuu",
   "license": "ISC",
   "dependencies": {
+    "neastooapi": "^1.0.0",
     "node-fetch": "^3.3.2"
-  },
-  "devDependencies": {}
+  }
 }
