--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "YusupKakuu",
   "license": "ISC",
   "dependencies": {
-    "neastooapi": "^1.0.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "cheerio": "1.0.0-rc.12",
+    "axios": "1.7.7",
   }
 }
