--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neastooapi",
-  "version": "1.0.0",
+  "version": "0.0.1-beta",
   "description": "NeastooID Scraper Module NPMJS",
   "main": "index.js",
   "type": "module",
