--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "dependencies": {
     "node-fetch": "^3.3.2",
     "cheerio": "1.0.0-rc.12",
-    "axios": "1.7.7",
+    "axios": "1.7.7"
   }
 }
