--- a/package.json
+++ b/package.json
@@ -7,7 +7,73 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["Ai", "Screper", "Api", "NeastooID"],
+  "keywords": [
+    "Scraper",
+    "Downloader",
+    "TikTok",
+    "Instagram",
+    "Capcut",
+    "Google Drive",
+    "MediaFire",
+    "Facebook",
+    "Twitter",
+    "Spotify",
+    "Pinterest",
+    "Sfile",
+    "YouTube",
+    "Google Text To Speech",
+    "Google Translator",
+    "Text To Speech",
+    "Translator",
+    "AutoDown",
+    "Google",
+    "Translator",
+    "Text To Speech",
+    "Scraper tools",
+    "Data scraping",
+    "Content downloader",
+    "Social media downloader",
+    "File downloader",
+    "Audio downloader",
+    "Video downloader",
+    "Search",
+    "Translation",
+    "Language",
+    "Download",
+    "Automation",
+    "Media",
+    "Text",
+    "Speech",
+    "Utility",
+    "Framework",
+    "Library",
+    "Development",
+    "Tool",
+    "AI",
+    "NLP",
+    "Machine learning",
+    "Deep learning",
+    "Neural networks",
+    "Pattern recognition",
+    "Computer vision",
+    "Productivity",
+    "Analysis",
+    "Optimization",
+    "Debugging",
+    "Performance",
+    "Diagnostic",
+    "Models",
+    "Applications",
+    "Algorithms",
+    "Web scraping",
+    "Data harvesting",
+    "Data mining",
+    "HTML parsing",
+    "Bulk downloader",
+    "Streaming downloader",
+    "Web tools",
+    "Development tools"
+  ],
   "author": "YusupKakuu",
   "license": "ISC",
   "dependencies": {
