--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Publish to npm
 on:
   push:
     branches:
-      - kontol  # Atur branch yang ingin memicu action ini
+      - main  # Atur branch yang ingin memicu action ini
  
 jobs:
   publish:
