--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.3",
   "description": "Scraper Module NSTID",
   "main": "index.js",
+  "author": "NeofetchNpc",
   "type": "module",
   "scripts": {
     "test": "node test.js"
