--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neastooapi",
-  "version": "0.1.15",
+  "version": "0.1.15-1",
   "description": "Scraper Module NSTID",
   "main": "index.js",
   "author": "NeofetchNpc",
