--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   "dependencies": {
     "node-fetch": "^3.3.2",
     "cheerio": "1.0.0-rc.12",
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "ba-logo": "^1.0.3"
   }
 }
