--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "NeastooID Scraper Downloader",
   "main": "index.js",
   "author": "NeofetchNpc",
+  "type": "module",
   "scripts": {
     "test": "node test.js"
   },
