--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neastooapi",
+  "name": "NessAPI",
   "version": "1.0.4",
   "description": "NeastooID Scraper Downloader",
   "main": "index.js",
