--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
   "dependencies": {
     "node-fetch": "^3.3.2",
     "cheerio": "1.0.0-rc.12",
-    "axios": "^1.7.2",
-    "ba-logo": "^1.0.3"
+    "axios": "^1.7.2"
   }
 }
