--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neastooapi",
   "version": "1.0.5",
-  "description": "NeastooID Scraper Downloader",
+  "description": "NessID Scraper Module",
   "main": "index.js",
   "author": "NeofetchNpc",
   "type": "module",
