--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neastooapi",
-  "version": "1.1.02",
-  "description": "NessID Scraper Module",
+  "version": "1.1.03",
+  "description": "Scraper Downloader Module",
   "main": "index.js",
   "author": "NeofetchNpc",
   "type": "module",
