--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
   "homepage": "https://saweria.co/YUSUP909",
   "dependencies": {
     "axios": "1.7.4",
-    "node-fetch": "3.3.2",
-    "ba-logo": "1.0.3"
+    "node-fetch": "3.3.2"
   }
 }
