--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/NeofetchNpc/NeastooAPI.git"
+    "url": "https://github.com/NeofetchNpc/NESSID.git"
   },
   "homepage": "https://saweria.co/YUSUP909",
   "dependencies": {
