--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neastooapi",
   "version": "1.1.8",
-  "description": "Scraper Downloader Module",
+  "description": "Scraper Module",
   "main": "index.js",
   "type": "module",
   "scripts": {
