--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "neastooapi",
   "version": "2.0.5",
-  "description": "Scraper Downloaders",
+  "description": "Scraper Tools",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "node test.js"
   },
   "keywords": [
-    "AI",
-    "Anime",
-    "Waifu",
     "Scraper",
     "Downloader",
     "TikTok",
@@ -24,17 +21,58 @@
     "Pinterest",
     "Sfile",
     "YouTube",
+    "Google Text To Speech",
+    "Google Translator",
+    "Text To Speech",
+    "Translator",
+    "AutoDown",
+    "Google",
+    "Translator",
+    "Text To Speech",
     "Scraper tools",
     "Data scraping",
     "Content downloader",
     "Social media downloader",
+    "File downloader",
     "Audio downloader",
     "Video downloader",
-    "chatgpt",
-    "blackbox",
-    "bing",
-    "Scraper API",
-    "Social API"
+    "Search",
+    "Translation",
+    "Language",
+    "Download",
+    "Automation",
+    "Media",
+    "Text",
+    "Speech",
+    "Utility",
+    "Framework",
+    "Library",
+    "Development",
+    "Tool",
+    "AI",
+    "NLP",
+    "Machine learning",
+    "Deep learning",
+    "Neural networks",
+    "Pattern recognition",
+    "Computer vision",
+    "Productivity",
+    "Analysis",
+    "Optimization",
+    "Debugging",
+    "Performance",
+    "Diagnostic",
+    "Models",
+    "Applications",
+    "Algorithms",
+    "Web scraping",
+    "Data harvesting",
+    "Data mining",
+    "HTML parsing",
+    "Bulk downloader",
+    "Streaming downloader",
+    "Web tools",
+    "Development tools"
   ],
   "author": "NeofetchNpc",
   "license": "ISC",
